phase-2/day-14/manifests/fixed/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-2
  labels:
    env: training
    project: "2"
