phase-2/day-14/manifests/fixed/04-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: guestbook-frontend
  namespace: project-2
  labels:
    app: frontend
spec:
  containers:
  - name: web-app
    image: hashicorp/http-echo:latest
    args:
    - "-text=Guestbook Frontend running. Connected to Redis."
    ports:
    - containerPort: 5678
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook-frontend-svc
  namespace: project-2
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 5678
